--- a/TabBarNavigatorExample/package.json
+++ b/TabBarNavigatorExample/package.json
@@ -6,7 +6,7 @@
     "start": "node_modules/react-native/packager/packager.sh"
   },
   "dependencies": {
-    "react-native": "^0.13.2",
-    "react-native-tabbar-navigator": "*"
+    "react-native": "^0.14.2",
+    "react-native-tabbar-navigator": "^0.1.3"
   }
 }
