--- a/package.json
+++ b/package.json
@@ -1,18 +1,21 @@
 {
   "name": "react-native-tabbar-navigator",
-  "version": "0.2.8",
-  "description": "A component which builds excellent Navigator + TabBar based application, have a good solution for implementing hidesBottomBarWhenPushed in iOS.",
-  "main": "MainNavigator.js",
+  "version": "0.4.0",
+  "description": "Yet another TabBar + Navigator component in React Native iOS, mainly focus on simplify the construction of TabBar + Navigator, and solving the problem of lacking `hidesBottomBarWhenPushed` feature in React Native iOS.",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/DickyT/react-native-tabbar-navigator.git"
   },
   "keywords": [
-    "react",
-    "react-native",
-    "tabbar",
+    "ios",
     "navigator",
-    "ios"
+    "tabbar",
+    "react-native",
+    "react"
   ],
   "author": "DickyT",
   "license": "MIT",
